# pulse

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  test_script.py
.claude/: settings.local.json
docs/: AGENTIC_SYSTEM_TEMPLATE.md  RULE.md  test_mcp_server.py
pulse/state/: docs_hashes.json  github_readme_hashes.json
src/: __init__.py  graph.py  main.py  runner.py  types.py
src/agents/: base_node.py  dedup_node.py  ingestion_nodes.py  merge_digest_node.py  summarization_node.py
src/config/: profiles.py  settings.py
src/prompts/: templates.py
src/schemas/: deduplication_state.py  digest_state.py  ingestion_state.py  requests.py  responses.py  state.py  summarization_state.py  topic_profile.py
src/services/: AIService.py  base_service.py  email_service.py
src/tools/: blog_tool.py  doc_search_tool.py  github_search_tool.py  news_tool.py  research_search_tool.py
src/utils/: helpers.py  logging.py
tests/: test_tools.py  test_trafilatura.py  test_trafilatura_advanced.py
